# dockhand-mcp

claude-mcps/dockhand-mcp/: .gitignore  README.md  pyproject.toml
claude-mcps/dockhand-mcp/src/dockhand_mcp/: client.py  server.py
