[project]
name = "dockhand-mcp"
version = "0.1.0"
description = "MCP server for Dockhand Docker management"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.25,<2",
    "httpx>=0.27",
]

[project.scripts]
dockhand-mcp = "dockhand_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
